# MultiCent

./: .gitignore  ARTIFACT-EVALUATION.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  net_config.json  run_LAN_benchmarks.sh  run_WAN_benchmarks.sh  run_test.sh
benchmark/: CMakeLists.txt  applyV.cpp  benchmark.cpp  benchmark.h  chase_shuffle.cpp  compaction.cpp  comparison.cpp  doubleshuffle.cpp  equalszero.cpp  gather.cpp  graphiti_mpa.cpp  graphsc_linear.cpp  graphsc_mpc.cpp  graphsc_ro.cpp  mult.cpp  pi_1_benchmark.cpp  pi_1_ref_benchmark.cpp  pi_1_ref_test.cpp  pi_1_test.cpp  pi_2_benchmark.cpp  pi_2_ref_benchmark.cpp  pi_2_ref_test.cpp  pi_2_test.cpp  pi_3_benchmark.cpp  pi_3_ref_benchmark.cpp  pi_3_ref_test.cpp  pi_3_test.cpp  scatter.cpp  shuffle.cpp  sort.cpp  subcircuits.cpp  subcircuits.h  test.cpp  utils.cpp
certs/: README.md  cert1.pem  cert2.pem  cert3.pem  cert_ca.pem  key1.pem  key2.pem  key3.pem  key_ca.pem
evaluation_scripts/: analyze.py  dataset_plots.py  extended_scalability_plots.py  network_plots.py  run_LAN_benchmarks.sh  run_WAN_benchmarks.sh  scalability_plots_betterspacing.py
evaluation_scripts/raw_benchmark_outputs/: README.md
evaluation_scripts/raw_benchmark_outputs/p0/: WAN_output_pi_3_101_d0.txt  WAN_output_pi_3_101_d1.txt  WAN_output_pi_3_101_d2.txt  WAN_output_pi_3_11_d0.txt  WAN_output_pi_3_11_d1.txt  WAN_output_pi_3_11_d2.txt  WAN_output_pi_3_51_d0.txt  WAN_output_pi_3_51_d1.txt  WAN_output_pi_3_51_d2.txt  WAN_output_pi_3_ref_d1.txt  WAN_output_pi_3_ref_d2.txt  output_pi_1_101_d0.txt  output_pi_1_101_d1.txt  output_pi_1_101_d2.txt  output_pi_1_11_d0.txt  output_pi_1_11_d1.txt  output_pi_1_11_d2.txt  output_pi_1_51_d0.txt  output_pi_1_51_d1.txt  output_pi_1_51_d2.txt  output_pi_1_aarhus.txt  output_pi_1_hiv.txt  output_pi_1_london.txt  output_pi_1_ref_aarhus.txt  output_pi_1_ref_d1.txt  output_pi_1_ref_d2.txt  output_pi_1_ref_hiv.txt  output_pi_1_ref_london.txt  output_pi_2_101_d0.txt  output_pi_2_101_d1.txt  output_pi_2_101_d2.txt  output_pi_2_11_d0.txt  output_pi_2_11_d1.txt  output_pi_2_11_d2.txt  output_pi_2_51_d0.txt  output_pi_2_51_d1.txt  output_pi_2_51_d2.txt  output_pi_2_aarhus.txt  output_pi_2_arabi.txt  output_pi_2_higgs.txt  (+26 more)
evaluation_scripts/raw_benchmark_outputs/p1/: WAN_output_pi_3_101_d0.txt  WAN_output_pi_3_101_d1.txt  WAN_output_pi_3_101_d2.txt  WAN_output_pi_3_11_d0.txt  WAN_output_pi_3_11_d1.txt  WAN_output_pi_3_11_d2.txt  WAN_output_pi_3_51_d0.txt  WAN_output_pi_3_51_d1.txt  WAN_output_pi_3_51_d2.txt  WAN_output_pi_3_ref_d1.txt  WAN_output_pi_3_ref_d2.txt  output_pi_1_101_d0.txt  (+54 more)
local_demo/: network_lan.sh  network_off.sh  network_wan.sh  small_LAN_benchmarks.sh  small_WAN_benchmarks.sh
src/: CMakeLists.txt
src/graphsc/: offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/io/: netmp.h  tls_net_io_channel.h
src/utils/: circuit.cpp  circuit.h  helpers.cpp  helpers.h  scatter.h  types.h
(+66 files in other folders)
